solve wrong color

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -138,6 +138,7 @@ body {
 
 #option .textButton,
 #option .textButton-active {
+  color: white;
   padding: 0.75rem 0.5rem 0.75rem 0.5rem;
 }
 #option .textButton:hover,
